--- a/styles.css
+++ b/styles.css
@@ -28,82 +28,90 @@ html, body {
 }
 
 .communicators-container {
-    width: 90vw;
-    height: 90vh;
+    max-width: 500px;
     background-color: white;
     margin: 0 auto;
     padding: 1rem;
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
 }
 
 /***PAGER***/
 .pager-reciever {
     background-color: #283033;
-    padding: 2rem;
+    padding: 1rem;
+    max-width: 300px;
+    margin: 0 auto;
 }
 
 .pager-reciever h1 {
     margin-top: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 .pager-reciever-text {
     background-color: #9EC4B3;
-    padding: 2rem 0;
-    font-size: 1.75rem;
+    padding: 1rem 0;
+    font-size: 1.25rem;
+    height: 20px;
 }
 
 /***PHONE***/
 .phone {
     background-color: #D9D9D9;
-    padding: 2rem;
+    padding: 1rem;
     margin-top: 5vh;
+    max-width: 300px;
+    margin: 3vh auto 0;
 }
 
 .phone h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin-top: 0;
 }
 
 .phone-text {
     background-color: #444444;
-    padding: 2rem 0;
+    padding: 1rem 0;
     color: white;
-    font-size: 1.75rem;
+    font-size: 1.25rem;
+    height: 20px;
 }
 
 .dial-buttons {
     display: grid;
-    gap: 0.2rem;
+    gap: 1rem;
     flex-wrap: wrap;
-    grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
-    margin-top: 2rem;
+    grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+    margin-top: 1rem;
 }
 
 .btn {
     background-color: #F8F8F8;
     border: 0;
-    padding: 2rem 1.5rem;
+    padding: 1rem 1.5rem;
     font-family: inherit;
-    font-size: 2rem;
+    font-size: 1.25rem;
+    width: 100%;
+    margin: auto;
 }
 
 .reset-btn {
     width: 100%;
     background-color: #BE482A;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
     border: 1px solid black;
     font-family: inherit;
     text-transform: uppercase;
     color: white;
-    padding: 2rem;
-    font-size: 2rem;
+    padding: 1rem;
+    font-size: 1.25rem;
 }
 
 .send-btn {
@@ -112,6 +120,6 @@ html, body {
     border: 1px solid black;
     font-family: inherit;
     text-transform: uppercase;
-    padding: 2rem;
-    font-size: 2rem;
+    padding: 1rem;
+    font-size: 1.25rem;
 }
