--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,3 @@
-/*
-COLOR PALETTE
-
-PAGER BACKGROUND: #283033
-PAGER DISPLAY: #9EC4B3
-PAGER DISPLAY TEXT COLOR: #000000
-
-PHONE BACKGROUND: #D9D9D9
-PHONE DISPLAY: #9EC4B3
-PHONE DISPLAY TEXT COLOR: #F8F8F8
-PHONE KEY: #F8F8F8
-
-RESET AND SEND BUTTON BORDER COLOR: #0B0B0B
-
-RESET BUTTON BACKGROUND: #BE482A
-RESET BUTTON TEXT COLOR: #F8F8F8
-
-SEND BUTTON BACKGROUND: #3D9C7C
-SEND BUTTON TEXT COLOR: #0B0B0B
-*/
-
-
 html, body {
     margin: 0;
     padding: 0;
@@ -107,10 +85,10 @@ html, body {
     background-color: #BE482A;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
-    border: 1px solid black;
+    border: 1px solid #0B0B0B;
     font-family: inherit;
     text-transform: uppercase;
-    color: white;
+    color: #F8F8F8;
     padding: 1rem;
     font-size: 1.25rem;
 }
@@ -118,11 +96,12 @@ html, body {
 .send-btn {
     width: 100%;
     background-color: #3D9C7C;
-    border: 1px solid black;
+    border: 1px solid #0B0B0B;
     font-family: inherit;
     text-transform: uppercase;
     padding: 1rem;
     font-size: 1.25rem;
+    color: #0B0B0B;
 }
 
 /***/
