--- a/styles.css
+++ b/styles.css
@@ -3,18 +3,18 @@ html, body {
     padding: 0;
     background-color: #282828;
     font-family: "Press Start 2P", system-ui;
+    box-sizing: border-box;
 }
 
 .communicators-container {
-    max-width: 500px;
+    width: 80vw;
     background-color: white;
     margin: 0 auto;
     padding: 1rem;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 76vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
 }
 
 /***PAGER***/
@@ -116,4 +116,12 @@ html, body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+@media screen and (max-height: 650px) {
+    .communicators-container {
+        height: auto;
+        margin-top: 2vh;
+        margin-bottom: 2vh;
+    }
 }
